--- a/war/css/car.css
+++ b/war/css/car.css
@@ -1,12 +1,14 @@
 html,body{font-family:'MyriadProRegular',serif;background-color:#eaeaea;overflow:hidden;height:100%;width:100%;}
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,
+video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;}
 
 ul{color: #000000;text-decoration: none;list-style: none;}
 #header,ul {padding-left: 0px;margin: 0px;}
 #header{left:0px;top:0px;}
-#header{background:url("/images/dark-pattern.png");position:absolute;-overflow:hidden;height:6%;width:100%;z-index:2002;}
-#header #sectionMenu{position:absolute;line-height:6%;left:100px;top:0px;}
-#header #sectionMenu a{-webkit-transition:color 450ms cubic-bezier(0.2, 0, 0.07, 1);text-transform:uppercase;text-decoration:none;line-height:40px;display:inline-block;font-size:12px;color:rgba(255, 255, 255, 0.6);margin:0 4px;}
+#header{background-color:#222222;position:absolute;-overflow:hidden;height:8%;width:100%;z-index:2002;}
+#header #sectionMenu{position:absolute;line-height:8%;left:100px;top:0px;}
+#header #sectionMenu a{-webkit-transition:color 450ms cubic-bezier(0.2, 0, 0.07, 1);text-transform:uppercase;text-decoration:none;line-height:40px;
+display:inline-block;font-size:100%;color:rgba(255, 255, 255, 0.6);margin:0 4px;}
 #header #sectionMenu a:hover{color:#ffffff;}
 #header #sectionMenu a.active{color:#ffffff;}
 
@@ -14,6 +16,21 @@ ul{color: #000000;text-decoration: none;list-style: none;}
 #go a{text-decoration:none;background-color:#68838B;font-size:150%;color:#cccccc;padding:0 10px 0 10px;-webkit-border-radius:5px;cursor:pointer;
 -webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1), color 450ms cubic-bezier(0.2, 0, 0.07, 1);}
 #go a:hover{background-color:#ADD8E6;color:#333333;}
+
+/* .button{background-color:#222222;overflow:hidden;display:block;height:60px;width:60px;}.button span{-webkit-transition-property:top, left, opacity;-moz-transition-property:top, left, opacity;-o-transition-property:top, left, opacity;transition-property:top, left, opacity;-webkit-transition-duration:0ms, 0ms, 800ms;-moz-transition-duration:0ms, 0ms, 800ms;-o-transition-duration:0ms, 0ms, 800ms;transition-duration:0ms, 0ms, 800ms;-webkit-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-moz-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-o-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-webkit-transition-delay:0ms;-moz-transition-delay:0ms;-o-transition-delay:0ms;transition-delay:0ms;background:transparent no-repeat center;text-indent:-9999px;position:relative;display:block;opacity:0.5;margin:20px;height:20px;width:20px;}.button span:after{background:transparent no-repeat center;position:absolute;display:block;height:20px;width:20px;left:0px;top:0px;content:' ';} */
+/* .button.close span{background-image:url("/images/cross.gif");}.button.close span:after{background-image:url("/images/cross.gif");top:60px;} */
+/* .button.next span{background-image:url("/images/arrow-next.gif");}.button.next span:after{background-image:url("/images/arrow-next.gif");left:-60px;} */
+/* .button.prev span{background-image:url("/images/arrow-prev.gif");}.button.prev span:after{background-image:url("/images/arrow-prev.gif");left:60px;} */
+/* .button.up span{background-image:url("/images/arrow-up.gif");}.button.up span:after{background-image:url("/images/arrow-up.gif");top:60px;} */
+/* .button.down span{background-image:url("/images/arrow-down.gif");}.button.down span:after{background-image:url("/images/arrow-down.gif");top:-60px;} */
+/* .button.view span{background-image:url("/images/plus.gif");}.button.view span:after{background-image:url("/images/plus.gif");} */
+
+/* .button:hover,.button.over{}.button:hover span,.button.over span{-webkit-transition-duration:400ms;-moz-transition-duration:400ms;-o-transition-duration:400ms;transition-duration:400ms;-webkit-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-moz-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-o-transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);transition-timing-function:cubic-bezier(0.23, 1, 0.32, 1);-webkit-transition-delay:0ms;-moz-transition-delay:0ms;-o-transition-delay:0ms;transition-delay:0ms;opacity:1.0;} */
+/* .button:hover.up span,.button.over.up span,.button:hover.close span,.button.over.close span{top:-60px;} */
+/* .button:hover.down span,.button.over.down span{top:60px;} */
+/* .button:hover.next span,.button.over.next span{left:60px;} */
+/* .button:hover.prev span,.button.over.prev span{left:-60px;} */
+/* .button:hover.view span,.button.over.view span{top:-120px;} */
 
 .share{margin-top:-45px;position:fixed;display:block;left:0px;top:50%;z-index:3020;}.share li{position:relative;display:block;height:30px;width:30px;}
 .share li .icon{background-color:#222222;position:absolute;overflow:hidden;display:block;height:30px;width:30px;z-index:2;}
@@ -26,10 +43,10 @@ ul{color: #000000;text-decoration: none;list-style: none;}
 .share .facebook .icon em{background-image:url("/images/facebook.png");}
 .share .google .icon em{background-image:url("/images/plusone.png");}
 
-#staticframe {position:absolute;left:0px;top:6%;width:100%;height:100%;margin: 0px;padding: 0px;overflow:hidden;z-index:1;}
+#staticframe {position:absolute;left:0px;top:8%;width:100%;height:100%;margin: 0px;padding: 0px;overflow:hidden;z-index:1;}
 
-#surveyframe {position:absolute;left:0px;top:6%;bottom:4%;width:100%;margin: 0px;padding: 0px;
-				   overflow:hidden;z-index:1;background:#222222;}
+#surveyframe {position:absolute;left:0px;top:8%;bottom:4%;width:100%;margin: 0px;padding: 0px;
+				   overflow:hidden;z-index:1;background-color:#222222;}
 #surveyframe a{text-decoration:none;margin:0 6px 0 6px;padding: 4px; color:#cccccc;
 	-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1), color 450ms cubic-bezier(0.2, 0, 0.07, 1);}
 	#surveyitem{position:absolute;height:35%;width:35%;margin:0px;padding:0px;}
@@ -42,24 +59,24 @@ ul{color: #000000;text-decoration: none;list-style: none;}
 	#surveyitem a:hover{background-color:#68838B; color:#ffffff;}
 	#surveyitem a.selected{background-color:#ADD8E6; color:#333333;}
 
-#interactionframe {position:absolute;left:0px;top:6%;bottom:4%;width:100%;height:80%;margin: 0px;padding: 0px;
-				   overflow:hidden;z-index:1;background:#222222;}
+#interactionframe {position:absolute;left:0px;top:8%;bottom:4%;width:100%;height:72%;margin: 0px;padding: 0px;
+				   overflow:hidden;z-index:1;background-color:#222222;}
 	#modelframe1 {position:absolute;left:0px;top:0px;width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}
 	#modelframe2 {position:absolute;left:0%;top:0px;width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}
 	#modelframe3 {position:absolute;left:0px;top:0px;width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}
 	#modelframe4 {position:absolute;left:0%;top:0px;width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}
-	#selectbutton {position:absolute;height:45%;width:40%;background-color:#333333;cursor:pointer;
+	#selectbutton {position:absolute;height:47%;width:40%;background-color:#333333;cursor:pointer;
 	-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1),border-color 450ms cubic-bezier(0.2, 0, 0.07, 1);
 	border-width:5px;border-style:solid;border-color:#222222;}
-	#selectbutton.topleft{left:100px;top:10px;}
-	#selectbutton.topright{left:50%%;top:10px;}
-	#selectbutton.bottomleft{left:100px;top:52%;}
-	#selectbutton.bottomright{left:50%;top:52%;}
+	#selectbutton.topleft{left:100px;top:0%;}
+	#selectbutton.topright{left:50%%;top:0%;}
+	#selectbutton.bottomleft{left:100px;top:50%;}
+	#selectbutton.bottomright{left:50%;top:50%;}
 	#selectbutton.selected{border-width:5px;border-style:solid;border-color:#ADD8E6;}
 	#selectbutton.active{background-color:#838B8B;}
 
-#dataframe {position:absolute;left:0px;top:6%;bottom:4%;width:100%;margin: 0px;padding: 0px;
-		    overflow:hidden;z-index:1;background:#222222;}
+#dataframe {position:absolute;left:0px;top:8%;bottom:4%;width:100%;margin: 0px;padding: 0px;
+		    overflow:hidden;z-index:1;background-color:#222222;}
 	#datalistframe {position:absolute;left:100px;top:5%;height:10%;width:100%;}
 	#datalistframe a{text-decoration:none;margin:0 6px 0 6px;padding: 4px; color:#ADD8E6;background-color:#333333;cursor:pointer;
 	-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1);}
@@ -73,57 +90,49 @@ ul{color: #000000;text-decoration: none;list-style: none;}
 	#datafactframe a:hover{background-color:#68838B;}
 	#datafactframe p{text-decoration:none;margin:0 6px 0 6px;padding: 4px; color:#68838B;}
 	
-#container {position:absolute;width:100%;height:80%;top:6%;background:#222222;}
-#createframe {position:absolute;left:0;top:0;width:80%;height:100%;margin: 0px;padding: 0px;
-				   overflow:hidden;z-index:1;}
-#slidecontrolframe {position:absolute;left:80%;width:20%;height:100%;margin: 0px;padding:0px;
-				   z-index:1;}
-/* 	#slider{width:85%;height:100%;margin:20px;padding:0px;} */
-
-#controlframe {position:absolute;left:0;top:86%;width:100%;height:13%;margin: 0px;padding: 0px;overflow:hidden;z-index:2;background:url("/images/dark-pattern.png");}
-	#spinner {position:absolute;left:100px;top:35%;width:5%;height:40%;}
-	#status {position:absolute;left:100px;top:5%;width:90%;height:30%;} #status a{font-size:120%;color:rgba(255, 255, 255, 0.6);}
-	#labelframe {position:absolute;left:100px;top:5%;width:90%;height:50%;}
-		#label {color:#cccccc; width:8%;height:30%;padding:0 10px 0 0;text-align:center;-webkit-border-radius:5px;cursor:pointer;display:inline-block;
-	background-color:#888888;-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1), color 450ms cubic-bezier(0.2, 0, 0.07, 1);}
-		#label:hover{background-color:#AAAAAA;}
 	
-	#cbutton {position:absolute;top:45%;width:15%;height:20px;padding:0 2px 0 2px;text-align:center;-webkit-border-radius:5px;
+/* 	#dataiterframe {position:absolute;left:40%;top:25%;height:20%;width:60%} */
+/* 	#dataiterframe a{text-decoration:none;margin:0 6px 0 6px;padding: 4px; color:#ADD8E6;background-color:#333333;cursor:pointer; */
+/* 	-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1);} */
+/* 	#dataiterframe a:hover{background-color:#68838B;} */
+/* 	#dataplotframe {position:absolute;top:50%;height:40%;width:100%;} */
+
+#controlframe {position:absolute;left:0;top:80%;width:100%;height:18%;margin: 0px;padding: 0px;overflow:hidden;z-index:2;background:#222222;}
+	#spinner {position:absolute;left:100px;top:45%;width:5%;height:30%;}
+	#status {position:absolute;left:100px;top:5%;width:90%;height:40%;} #status a{font-size:120%;color:rgba(255, 255, 255, 0.6);}
+	#cbutton {position:absolute;top:45%;width:15%;height:30%;padding:0 2px 0 2px;text-align:center;-webkit-border-radius:5px;
 	background-color:#444444;-webkit-transition:background-color 450ms cubic-bezier(0.2, 0, 0.07, 1), color 450ms cubic-bezier(0.2, 0, 0.07, 1);}
-	#cbutton.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;}#cbutton.active{background-color:#68838B;}
-	#cbutton.addlabel{left:15%;}
 	#cbutton.train{left:15%;}
 	#cbutton.restart{left:32%;}
 	#cbutton.submit{left:49%;}
 	#cbutton.confirm{left:49%;width:7%;}
 	#cbutton.cancel{left:57%;width:7%;}
-	#cbutton.confirmlabel{top:70%;height:20%;left:10%;width:30%;}
-	#cbutton.cancellabel{top:70%;height:20%;left:50%;width:30%;}
-	
-/* 	#cbutton.addlabel.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;}#cbutton.addlabel.active{background-color:#68838B;} */
-/* 	#cbutton.train.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.train.active{background-color:#68838B;} */
-/* 	#cbutton.submit.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.submit.active{background-color:#68838B;} */
-/* 	#cbutton.restart.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.restart.active{background-color:#68838B;} */
-/* 	#cbutton.confirm.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.confirm.active{background-color:#68838B;} */
-/* 	#cbutton.cancel.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.cancel.active{background-color:#68838B;} */
-	
-	#cbutton a{font-size:100%;-webkit-transition:color 450ms cubic-bezier(0.2, 0, 0.07, 1);
-	text-transform:uppercase;text-decoration:none;display:inline-block;color:#cccccc;}
+	#cbutton.train.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.train.active{background-color:#68838B;}
+	#cbutton.submit.highlight{color:#333333;background-color:#BB66AA;cursor:pointer;} #cbutton.submit.active{background-color:#882255;}
+	#cbutton.restart.highlight{color:#333333;background-color:#ADD8E6;cursor:pointer;} #cbutton.restart.active{background-color:#68838B;}
+	#cbutton.confirm.highlight{color:#333333;background-color:#BB66AA;cursor:pointer;} #cbutton.confirm.active{background-color:#882255;}
+	#cbutton.cancel.highlight{color:#333333;background-color:#BB66AA;cursor:pointer;} #cbutton.cancel.active{background-color:#882255;}
 
-	.palette {position:absolute;top:45%;width:4%;height:20px;opacity:0.6;-webkit-border-radius:5px;
+	#cbutton a{font-size:100%;-webkit-transition:color 450ms cubic-bezier(0.2, 0, 0.07, 1);
+	text-transform:uppercase;text-decoration:none;line-height:40px;display:inline-block;color:rgba(255, 255, 255, 0.6);}
+
+	.palette {position:absolute;top:45%;width:4%;height:30%;opacity:0.6;-webkit-border-radius:5px;
 	-webkit-transition:opacity 450ms cubic-bezier(0.2, 0, 0.07, 1);cursor:pointer;}
 	.palette:hover{opacity:1.0;}
-	
-	
+
 #feedbackframe {position:absolute;left:0px;top:8%;bottom:4%;width:100%;margin: 0px;padding: 0px;
 				   overflow:hidden;z-index:1;background-color:#222222;}
 
 #footer{background-color:#222222;position:fixed;height:4.1%;width:100%;bottom:0;z-index:2001;left:0px;}
-#footer{text-transform:uppercase;line-height:30px;font-size:11px;color:#4d4d4d;}#footer p{margin:0 10px;}
+#footer{text-transform:uppercase;line-height:30px;font-size:100%;color:#4d4d4d;}#footer p{margin:0 10px;}
 #footer a{text-decoration:none;margin-right:4px;color:#808080;}#footer a:hover{color:#FFF;}
-#footer .info{-webkit-transition:opacity 350ms ease-out;-moz-transition:opacity 350ms ease-out;-o-transition:opacity 350ms ease-out;transition:opacity 350ms ease-out;background:transparent url('/images/navigate.gif') no-repeat center;text-indent:-9999px;position:absolute;overflow:hidden;display:block;opacity:0.25;height:30px;width:35px;right:10px;top:0px;}#footer .info:hover{opacity:1.0;}
+#footer .info{-webkit-transition:opacity 350ms ease-out;-moz-transition:opacity 350ms ease-out;-o-transition:opacity 350ms ease-out;transition:opacity 350ms ease-out;background:transparent url('/images/navigate.gif') no-repeat center;text-indent:-9999px;position:absolute;overflow:hidden;display:block;opacity:0.25;height:30px;width:35px;right:10px;top:0px;}
+#footer .info:hover{opacity:1.0;}
 
-#about {position:absolute;left:0%; top:8%;width:100%;height:100%;margin: 0px;padding: 0px;color:#dddddd;background-color:#111111;font-size:100%;text-align:left;}
+#about {position:absolute;top:8%;width:100%;height:88%;
+padding: 0px;color:#dddddd;background-color:#111111;font-size:150%;text-align:left;}
+#about p{padding-left:30%;padding-right:30%;padding-top:5%;}
+#about :link, #about :visited {color:#68838B; text-decoration:none;}
 #about ul{color:#dddddd;}
 
 .fullscreen .colour{height:0px !important;}
