--- a/war/css/yiren.css
+++ b/war/css/yiren.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'MyriadProLight', arial,sans-serif;
-	font-size:12pt;
+	font-size:14pt;
 	font-weight:normal;
 	overflow-x: auto;
 	overflow-y: scroll;
@@ -20,18 +20,18 @@ ul{
 }
 
 .links, .links:link, .links:visited{
-	color: #000000;
+	color: #000077;
 	text-decoration: none;
 	-webkit-transition: background-color 0.5s ease;
 	-moz-transition: background-color 0.5s ease;
 }
 
 .links:hover{
-	background-color: #aaaaaa;
+	background-color: #eeeeee;
 }
 
 #side {
-	position: absolute;
+	position: fixed;
 	top: 20px;
 	left: 100px;
 	width: 210px;
@@ -50,54 +50,18 @@ ul{
 	margin-bottom: 10px;
 }
 
-#fancyblock{
-	position: absolute;
-	top: 250px;
-	margin-bottom: 10px;
-}
-
-#fancyblock a{
-	color:#000000;
-	font-size: 10pt;
-}
-
-#3dmodel {
-	position: absolute;
-	top:10px;
-	height:120px;
-}
-
-#tweetdiv {
-	position: absolute;
-	top: 400px;
-}
-
-#tweet, #tweet:link, #tweet:visited{
-	position: absolute;
-	color: #000000;
-	background-color: #ffffff;
-	-webkit-transition: background-color 0.5s ease;
-	-moz-transition: background-color 0.5s ease;
-	padding: 0;
-	overflow: hidden;
-	font-size: 10pt;
-}
-
-#tweet link:hover{
-	background-color: #aaaaaa;
-}
-
 #footnote{
-	position: absolute;
-	top:400px;
-	left: 0;
-	text-align: center;
+	position: fixed;
+	bottom:50px;
+	left: 100px;
+	width: 210px;
 	font-size: 10pt;
+	margin-right: 40px; 
 }
 
 #content{
 	position: absolute;
-	top: 20px;
+	top: 0px;
 	left: 350px;
 	width: 600px;
 	height: 550px;
@@ -105,17 +69,21 @@ ul{
 }
 
 #headline{
-	position: absolute;
+	position: fixed;
+	width: 100%;
+	height:30px;
+	background: #ffffff;
 	text-align: center;
 	font-family: 'MyriadProRegular', arial,sans-serif;
-	margin-top: 20px;
-	margin-bottom: 10px;
+	margin: 0px;
+	padding-top: 20px;
+	z-index: 99;
 }
 
 #headline ul a{
 	display: block;
-	padding-right: 42px;
-	padding-left: 62px;
+	padding-right: 52px;
+	padding-left: 52px;
 }
 
 #headline li{
@@ -123,11 +91,12 @@ ul{
 }
 
 #headline .selected{
-	color: #aaaaaa;
+	background-color: #000000;
+	color: #ffffff;
 }
 
 #headline .unselected{
-	color: #dddddd;
+	color: #999999;
 }
 
 .myphoto {
@@ -171,7 +140,7 @@ ul{
 
 #mywork .des{
 	position: relative;
-	font-size: 10pt;
+	font-size: 12pt;
 	left: 0px;
 	width: 450px;
 }
